Revised documentation and some data naming changes

--- a/README_pdf.html
+++ b/README_pdf.html
@@ -340,12 +340,8 @@ Test:
     # test data here
     ;
 
-Result 0,1:
-    # result data here
-    ;
-
-Result 1,2:
-    # result data here
+Scoring:
+    # judgment data here
     ;
 
 Question "Question1":
@@ -449,7 +445,7 @@ Scoring:
 
         <ul>
             <li>
-                <code>Scoring:</code>
+                <code>Scoring</code>
                 |
                 <strong>Scoring data</strong>
                 <ul>
